# CILE

./: .gitignore  CNAME  CONFIGURACION-BACKEND.md  CREAR-PULL-REQUEST.md  DIAGNOSTICO-FORMULARIO.md  GUIA-DESPLIEGUE-PRODUCCION.md  PR-DESCRIPTION.md  PR-MATERIALES.md  QUE-HACER-AHORA.md  README.md  SOLUCION-SISTEMA-REGISTRO.md  dashboard.html  index.html  package.json  register.html  test-register.html
backend/: .env.example  README.md  package.json  server.js
backend/config/: database.js
backend/controllers/: authController.js
backend/middleware/: auth.js  validators.js
backend/models/: User.js
backend/routes/: auth.js
backend/scripts/: initDB.js
clinica_cultural_linguistica/: README.md  pyproject.toml
clinica_cultural_linguistica/examples/: ejemplo_pipeline.py
clinica_cultural_linguistica/src/ccl/: __init__.py  deteccion_bloqueos_discursivos.py  diagnostico_linguistico_emocional.py  prescripcion_tareas.py  radiografia_cultural.py  riesgo_psico_emocional.py  seguimiento_progreso.py  utils.py
css/: dashboard.css  register.css  style.css
js/: config.js  dashboard.js  main.js  register.js
materiales/: README.md  convert-to-pdf.py  generate-html.py  generate-pdf.js  generate-pdf.py  html-to-pdf.js  pdf-style.css  semana1.md  semana2.md  semana3.md  semana4.md
materiales/html/: semana1.html  semana2.html  semana3.html  semana4.html
materials/: index.html
