[tool.poetry]
name = "ccl"
version = "0.1.0"
description = "Clínica Cultural y Lingüística - Sistema de análisis de texto para diagnóstico lingüístico, cultural y emocional"
authors = ["Tu Nombre <tu@email.com>"]
readme = "README.md"
packages = [{include = "ccl", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
# Dependencias opcionales para NLP avanzado (se pueden instalar después)
# spacy = {version = "^3.0", optional = true}
# nltk = {version = "^3.8", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"
flake8 = "^6.1.0"

[tool.poetry.extras]
# Para instalar con: poetry install -E nlp
nlp = ["spacy", "nltk"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
